Fixed some layout issue on mobile view

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2014,13 +2014,13 @@ body.single-activities {
       padding: 10px 10px 9px;
       @include tab {
         padding: 10px 20px 9px;
-        width: 20%;
+        width: 28%;
       }
     }
     .tbcol:first-child {
       width: 40%;
       @include tab {
-        width: 60%;
+        width: 44%;
       }
     }
     .thead {
